--- a/ShiLei.Study.Demos/ShiLei.Study.WinfrmStudy/ShiLei.Study.WinfrmStudy.csproj
+++ b/ShiLei.Study.Demos/ShiLei.Study.WinfrmStudy/ShiLei.Study.WinfrmStudy.csproj
@@ -52,8 +52,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCalculation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCalculation.Designer.cs">
+      <DependentUpon>frmCalculation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCalculation.resx">
+      <DependentUpon>frmCalculation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
