提交多线程、委托部分

--- a/ShiLei.Study.Demos/ShiLei.Study.Tools/ShiLei.Study.Tools.csproj
+++ b/ShiLei.Study.Demos/ShiLei.Study.Tools/ShiLei.Study.Tools.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ShiLei.Study.Tools</RootNamespace>
     <AssemblyName>ShiLei.Study.Tools</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="IPAdressTools\IpTools.cs" />
     <Compile Include="MessageInfo.cs" />
     <Compile Include="Models\RegisterKeyModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -49,6 +51,7 @@
     <Compile Include="XmlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="IPAdressTools\IpToolsReadMe.txt" />
     <Content Include="LearnMore.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
