--- a/ShiLei.Study.Demos/ShiLei.Study.WcfHost/web.config
+++ b/ShiLei.Study.Demos/ShiLei.Study.WcfHost/web.config
@@ -1,18 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
-
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
+  <!--
+    有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
+
+    可在 <httpRuntime> 标记上设置以下特性。
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="false" targetFramework="4.5" />
+    <compilation debug="false" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
     <services>
       <service name="ShiLei.Study.WcfStudy.EmployeeSrv">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration=""
-          contract="ShiLei.Study.WcfStudy.IEmployeeSrv" />
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="" contract="ShiLei.Study.WcfStudy.IEmployeeSrv"/>
       </service>
     </services>
     <behaviors>
@@ -26,9 +32,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -38,5 +44,4 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
 </configuration>
